# DiskChurn

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  diskchurn-prd.md  structure.ini
.claude/: settings.json
.claude/skills/: hooks.md
src/: app.rs  classifier.rs  delta.rs  entropy.rs  history.rs  lib.rs  main.rs  scanner.rs  treemap.rs  types.rs
tests/: classifier.rs  delta.rs  entropy.rs  history.rs  treemap.rs
