[package]
name = "diskchurn"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Carvajal Brown"]

[[bin]]
name = "diskchurn"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
walkdir = "2"

[dependencies.windows]
version = "0.56"
features = [
    "Win32_System_Ioctl",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
]

[profile.release]
opt-level = 3
lto = true
